MOD: Support 4.4.0 and 4.5.1